# quak

./: LICENSE  pyproject.toml
notebooks/: numpy_cheat_sheet.ipynb
quak/: datasets.py
quak_scripts/: create_kernel.py
tests/: test_linear_dataset.py
